kubernetes/doc-home-cluster/infrastructure/security/authentik/outpost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
spec:
    rules:
        - host: ingress-ext.piscio.net
          http:
              paths:
                  - path: /outpost.piscio.net
                    pathType: Prefix
                    backend:
                        # Or, to use an external Outpost, create an ExternalName service and reference that here.
                        # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
                        service:
                            name: ak-outpost-authentik-embedded-outpost # to be created from Authentik GUI
                            port:
                                number: 9000
